@@ -6,4 +6,4 @@ min_minetest_version = 0.4
 author = Jordan Irwin (AntumDeluge)
 license = MIT
 depends = 3d_armor_light, 3d_armor
-optional_depends = default
+optional_depends = default, technic_armor
